# mizucli

./: .gitignore  Cargo.toml  LICENSE  README.md  extract_frames.py
.github/workflows/: ci.yml
src/: animation.rs  app.rs  main.rs  metrics.rs
src/config/: settings.rs
src/ui/: mod.rs  theme.rs
src/ui/panels/: cpu.rs  disk.rs  mod.rs  net.rs  ram.rs  wave.rs
